--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://https://aja-min.github.io/ajablo/"
+baseURL = "https://aja-min.github.io/ajablo/"
 languageCode = "zh-cn"
 DefaultContentLanguage = "zh-cn"
 title = "My New Hugo Site"
