--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://aja-min.github.io/ajablo/"
+baseURL = "https://ajablog.net/"
 languageCode = "en"
 DefaultContentLanguage = "en"
 title = "Aja Blog"
